--- a/ETLSite/ETLSite.html
+++ b/ETLSite/ETLSite.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>ETL Project NBA Success from 2000-2020</head>
+    <head style="NavyBlue"><b>ETL Project NBA Success from 2000-2020</b></head>
     <h1>created by Altricia Latimer, Alex Martinez, Stephanie Rivas, and Howard Mayorga</h1>
     
-    <h2>Project Report</h2>
+    <h2><b>Project Report</b></h2>
     <p><a href="" </a></p>
     
-    <h3>Data Cleanup and Analysis</h3>
-    <p>Data Sources</p>
+    <h3><b>Data Cleanup and Analysis</b></h3>
+
+       <p>Data Sources</p>
+
+       <p>Types of Transformation</p>
+
+       <p>Types of Final Production</p>
+
+       <p>Final Tables or Collectors</p>
 </html>
