--- a/ETLSite/ETLSite.html
+++ b/ETLSite/ETLSite.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head style="NavyBlue"><b>ETL Project NBA Success from 2000-2020</b></head>
+    <head style="color:NavyBlue;""><b>ETL Project NBA Success from 2000-2020</b></head>
     <h1>created by Altricia Latimer, Alex Martinez, Stephanie Rivas, and Howard Mayorga</h1>
     
     <h2><b>Project Report</b></h2>
-    <p><a href="" </a></p>
+    <p><a> href="" </a></p>
     
     <h3><b>Data Cleanup and Analysis</b></h3>
 
@@ -15,4 +15,5 @@
        <p>Types of Final Production</p>
 
        <p>Final Tables or Collectors</p>
+
 </html>
