--- a/ETLSite/ETLSite.html
+++ b/ETLSite/ETLSite.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head style="color:NavyBlue;""><b>ETL Project NBA Success from 2000-2020</b></head>
-    <h1>created by Altricia Latimer, Alex Martinez, Stephanie Rivas, and Howard Mayorga</h1>
+    <h1 style="color:NavyBlue;""><b>ETL Project NBA Success from 2000-2020</b></h1>
+    <h2>created by Altricia Latimer, Alex Martinez, Stephanie Rivas, and Howard Mayorga</h2>
     
-    <h2><b>Project Report</b></h2>
+    <h3><b>Project Report</b></h3>
     <p><a> href="" </a></p>
     
-    <h3><b>Data Cleanup and Analysis</b></h3>
+    <h4><b>Data Cleanup and Analysis</b></h4>
 
        <p>Data Sources</p>
 
