--- a/ETLSite/ETLSite.html
+++ b/ETLSite/ETLSite.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <h1 style="color:NavyBlue;""><b>ETL Project NBA Success from 2000-2020</b></h1>
-    <h2>created by Altricia Latimer, Alex Martinez, Stephanie Rivas, and Howard Mayorga</h2>
-    
-    <h3><b>Project Report</b></h3>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
+        <div class="jumbotron text-center">
+            <h1 class="display-4"><strong>ETL Project NBA Success from 2000-2020</strong></h1>
+            <hr>
+            <p>Created by Altricia Latimer, Alex Martinez, Stephanie Rivas, and Howard Mayorga</p>
+        </div>
+    </div> 
+    <!-- <h3><b>Project Report</b></h3>
     <p><a> href="" </a></p>
     
     <h4><b>Data Cleanup and Analysis</b></h4>
@@ -14,6 +26,9 @@
 
        <p>Types of Final Production</p>
 
-       <p>Final Tables or Collectors</p>
-
+       <p>Final Tables or Collectors</p> -->
+</body>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </html>
+
