--- a/ETLSite/ETLSite.html
+++ b/ETLSite/ETLSite.html
@@ -14,6 +14,15 @@
             <hr>
             <p>Created by Altricia Latimer, Alex Martinez, Stephanie Rivas, and Howard Mayorga</p>
         </div>
+        <div class="col-md-12">
+            <h3><b>Project Report</b></h3>
+            <hr>
+
+        </div>
+        <div class="col-md-6">
+            <img src="../Resources/averagedraft.png" alt="average draft">
+
+        </div>
     </div> 
     <!-- <h3><b>Project Report</b></h3>
     <p><a> href="" </a></p>
