created nba_finals html from dataframe

--- a/ETLSite/ETLSite.html
+++ b/ETLSite/ETLSite.html
@@ -41,7 +41,14 @@
                 <img src="../Resources/distributionrank.png" alt="distribution rank">
                 </div>
         </div>
-                    
+        <div class="row">
+            <div class="embed-responsive embed-responsive-1by1 bg-white">
+                <iframe class="embed-responsive-item" src="../nba_finals.htm"></iframe>
+                
+            </div>
+
+
+        </div>            
 
     </div> 
     <!-- <h3><b>Project Report</b></h3>
