adding data htmls

--- a/ETLSite/distribution.html
+++ b/ETLSite/distribution.html
@@ -30,8 +30,8 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="finals_matches.html">Finals Matches</a>
-                <a class="dropdown-item" href="#">Finals Rosters</a>
-                <a class="dropdown-item" href="#">Draft Selections</a>
+                <a class="dropdown-item" href="finals_rosters.html">Finals Rosters</a>
+                <a class="dropdown-item" href="draft_picks.html">Draft Selections</a>
             </li>
 
             <!-- Draft and final roster links -->
