--- a/ETLSite/finals_matches.html
+++ b/ETLSite/finals_matches.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Distribution Rank</title>
+    <title>Finals Matchups</title>
 </head>
 <body>
      <!-- Start of navbar and navbrand -->
@@ -30,8 +30,8 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="finals_matches.html">Finals Matches</a>
-                <a class="dropdown-item" href="#">Finals Rosters</a>
-                <a class="dropdown-item" href="#">Draft Selections</a>
+                <a class="dropdown-item" href="finals_rosters.html">Finals Rosters</a>
+                <a class="dropdown-item" href="draft_picks.html">Draft Selections</a>
             </li>
 
             <!-- Draft and final roster links -->
@@ -48,7 +48,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="embed-responsive embed-responsive-1by1 bg-white">
+            <div class="embed-responsive embed-responsive-4by3 bg-white">
                 <iframe class="embed-responsive-item" src="../nba_finals.htm"></iframe>
                 
             </div>
