--- a/ETLSite/ETLSite.html
+++ b/ETLSite/ETLSite.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>NBA Finals Project</title>
+    <title>Distribution Rank</title>
 </head>
 <body>
      <!-- Start of navbar and navbrand -->
      <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="#"> NBA Finals Project</a>
+        <a class="navbar-brand" href="ETLSite.html"> NBA Finals Project</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,8 +30,8 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="finals_matches.html">Finals Matches</a>
-                <a class="dropdown-item" href="#">Finals Rosters</a>
-                <a class="dropdown-item" href="#">Draft Selections</a>
+                <a class="dropdown-item" href="finals_rosters.html">Finals Rosters</a>
+                <a class="dropdown-item" href="draft_picks.html">Draft Selections</a>
             </li>
 
             <!-- Draft and final roster links -->
