--- a/ETLSite/draft_picks.html
+++ b/ETLSite/draft_picks.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Distribution Rank</title>
+    <title>Draft Picks</title>
 </head>
 <body>
      <!-- Start of navbar and navbrand -->
@@ -48,9 +48,11 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                <img src="../Resources/averagedraft.png" alt="average draft">
-        </div>      
+            <div class="embed-responsive embed-responsive-4by3 bg-white">
+                <iframe class="embed-responsive-item" src="../draft.htm" width="100%"></iframe>
+                
+            </div>
+        </div>  
 
     </div> 
 </body>
