--- a/ETLSite/draft_picks.html
+++ b/ETLSite/draft_picks.html
@@ -47,6 +47,8 @@
     <br>
 
     <div class="container">
+      <h2 style="color: steelblue;"><strong>1990-2018 NBA Draft Picks</strong></h2>
+        <hr>
         <div class="row">
             <div class="embed-responsive embed-responsive-4by3 bg-white">
                 <iframe class="embed-responsive-item" src="../draft.htm" width="100%"></iframe>
