adding description under bar chart and centering image

--- a/ETLSite/avg_draft.html
+++ b/ETLSite/avg_draft.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Distribution Rank</title>
+    <title>Draft Selections</title>
 </head>
 <body>
      <!-- Start of navbar and navbrand -->
@@ -48,8 +48,22 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                <img src="../Resources/averagedraft.png" alt="average draft">
+            <div class="col-md-8">
+                <img src="../Resources/averagedraft.png" id="barchart" alt="average draft">
+            </div>
+            <div class="col-md-12">
+              <hr>
+              <br>
+              <h4 style="color: steelblue;"><strong>Break down of the Bar Chart</strong></h4>
+              <p>The graph above depicts the average draft ranking by position in the NBA Finals. 
+                As one can see the "Center" (C) position has the lowest average draft rank out of all the other
+                positions. NBA centers that made it to the finals from 2005-2015 were taken mid way through the 
+                first round at about 17th overall (NBA draft has 2 rounds, each round consisting of 30 picks). On average the
+                "Point Guard" (PG) position was taken late in the first round for NBA rosters (finals). With this sample data, one can 
+                assume the "Center" (C) position played a very important role for NBA teams who made it to the championship. 
+              </p>
+
+            </div>
         </div>      
 
     </div> 
