--- a/ETLSite/distribution.html
+++ b/ETLSite/distribution.html
@@ -8,53 +8,69 @@
     <link rel="stylesheet" href="style.css">
     <title>Distribution Rank</title>
 </head>
+
 <body>
-     <!-- Start of navbar and navbrand -->
-     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="ETLSite.html"> NBA Finals Project</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <!-- Start of navbar and navbrand -->
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+     <a class="navbar-brand" href="ETLSite.html"> NBA Finals Project</a>
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
 
-        <!-- Add finals image next to nav brand -->
-        <div class="nav" id="navimage">
-            <img src="../Resources/small_nba_logo.png"> 
-        </div>
-      
-        <!-- Dropdown menu ordered to the right -->
-        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Data Used
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="finals_matches.html">Finals Matches</a>
-                <a class="dropdown-item" href="finals_rosters.html">Finals Rosters</a>
-                <a class="dropdown-item" href="draft_picks.html">Draft Selections</a>
-            </li>
+     <!-- Add finals image next to nav brand -->
+     <div class="nav" id="navimage">
+         <img src="../Resources/small_nba_logo.png"> 
+     </div>
+   
+     <!-- Dropdown menu ordered to the right -->
+     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
+       <ul class="navbar-nav ml-auto">
+         <li class="nav-item dropdown">
+           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             Data Used
+           </a>
+           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+             <a class="dropdown-item" href="finals_matches.html">Finals Matches</a>
+             <a class="dropdown-item" href="finals_rosters.html">Finals Rosters</a>
+             <a class="dropdown-item" href="draft_picks.html">Draft Selections</a>
+         </li>
 
-            <!-- Draft and final roster links -->
-            <li class="nav-item">
-              <a class="nav-link" href="avg_draft.html">AVG_Draft<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="distribution.html">Distribution Rank</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    <br>
+         <!-- Draft and final roster links -->
+         <li class="nav-item">
+           <a class="nav-link" href="avg_draft.html">AVG_Draft<span class="sr-only">(current)</span></a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="distribution.html">Distribution</a>
+         </li>
+         <li class="nav-item">
+             <a class="nav-link" href="finals_apperances.html">Apperances</a>
+         </li>
+       </ul>
+     </div>
+   </nav>
+  <br>
 
+    <!-- Start of graph and description -->
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="../Resources/distributionrank.png" alt="distribution rank">
-                </div>
+                <img src="../Resources/distributionrank.png" id="boxplot" alt="distribution rank">
+            </div>
+            <div class="col-md-12">
+              <hr>
+              <br>
+              <h4 style="color: steelblue;"><strong>Break down of the Box Plot</strong></h4>
+              <p>The graph above depicts the distribution of draft rankings in the NBA Finals from 2005-2015. 
+                As one would think the average draft ranking for teams who made it in the finals have players who on average
+                were taken a little over mid-way through the first round. Taking players early on and having earlier draft picks,
+                gives teams a better chance to fight their way into a championship matchup.  
+              </p>
+            </div>
         </div>    
 
     </div> 
 </body>
+<!-- Importing scripts from bootstrap -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </html>
