fixing table widths and titles

--- a/roster_stats.htm
+++ b/roster_stats.htm
@@ -1,6 +1,6 @@
-<table border="1" class="dataframe">
+<table border="1" style="width: 800px; margin-left: 120px;" class="dataframe">
   <thead>
-    <tr style="text-align: right;">
+    <tr style="text-align: left;">
       <th></th>
       <th>Finals</th>
       <th>Won</th>
