--- a/ETLSite/finals_apperances.html
+++ b/ETLSite/finals_apperances.html
@@ -51,12 +51,12 @@
   <br>
 
     <!-- Adding dataframe from Pandas -->
-    <div class="container">
+    <div class="container" style="text-align: center;">
       <h2 style="color: steelblue;"><strong>Player Finals Apperances (2005-2015)</strong></h2>
         <hr>
         <div class="row">
             <div class="embed-responsive embed-responsive-16by9 bg-white">
-              <iframe class="embed-responsive-item" src="../roster_stats.htm" width="100%" id="draft_picks"></iframe>
+              <iframe class="embed-responsive-item" src="../roster_stats.htm"></iframe>
             </div>
         </div>  
 
