--- a/draft.htm
+++ b/draft.htm
@@ -1,6 +1,6 @@
-<table border="1" class="dataframe">
+<table border="1" style="width: 1000px;" class="dataframe">
   <thead>
-    <tr style="text-align: right;">
+    <tr style="text-align: left;">
       <th>Team</th>
       <th>Player</th>
       <th>College</th>
