--- a/nba_finals.htm
+++ b/nba_finals.htm
@@ -1,6 +1,6 @@
 <table border="1" class="dataframe">
   <thead>
-    <tr style="text-align: right;">
+    <tr style="text-align: left;">
       <th>Year</th>
       <th>Lg</th>
       <th>Champion</th>
