finished project report and centered ERD png as well as making it responsive

--- a/ETLSite/ETLSite.html
+++ b/ETLSite/ETLSite.html
@@ -75,12 +75,19 @@
                 postgresql with the data as well as the draft data we gathered.  
                 Once in the the database we created a jupyter notebook to transform the data.</p>
       
-            <div class="col-md-12">    
+            <div class="text-center">    
               <img src="../ERD_nba.png" class="img-fluid" alt="ERD graphic">
             </div>
             <h5><b>Load</b></h5>    
-            <p>With all the data and visualizations created we built a webpage using bootstrap.
-
+            <p>With all the data and visualizations created we built a webpage using bootstrap.  In our 
+              Postgresql database we had 2 tables (draft & finals_roster).  With that database we were able 
+              to create the distribution graphic of all the draft rankings for all the finals rosters and see how 
+              they distributed.  We also used it by joining both tables to see what the average draft position each
+              position had for all the players in the finals during the period queried.
+            </p>
+            <p>We chose the period of 2005-2015 because we felt a 10 year period would be a good range
+              for this analysis.  With more time we could look at other 10 year periods and see if we see 
+              any interesting correlations.
             </p>
 
         </div>           
